--- a/aliemu/styles/collections/plugins.styl
+++ b/aliemu/styles/collections/plugins.styl
@@ -134,8 +134,13 @@ input[type=submit].um-button.um-alt
     font-weight: 400
     padding: 10px
     margin: 0 !important
+    max-width: none
+
+#wc_show_hide_loggedin_username
+    max-width: none
 
 #wpcomm
+    max-width: none
     .wc-comment-title
         text-align: center
     .wpdiscuz-textarea-wrap
